# yap

./: AGENT.md  CONTRIBUTING.md  README.md  app.yaml  audio_engine.py  config_manager.py  development.md  fast-voice  fix_dupes.py  output.srt  probe_audio.py  pyproject.toml  qa_output.txt  qa_output_final.txt  requirements.txt  review.md  schema_prototype.yaml  transcriber.py
docs/: architecture.md  asyncapi.yaml
docs/plans/: vim_plugin.md
examples/: cowsay_app.py
examples/web-client/: index.html
src/fast_voice/: __init__.py
src/fast_voice/client/: core.py  daemon.py  tui.py  utils.py
src/fast_voice/server/: main.py
src/fast_voice/server/static/: index.html
src/fast_voice/testing/: client.py
src/fast_voice/whisper_live/: client.py  server.py  utils.py
src/fast_voice/whisper_live/backend/: base.py  faster_whisper_backend.py  translation_backend.py
src/fast_voice/whisper_live/transcriber/: transcriber_tensorrt.py
src/yap/: __init__.py  config.py
src/yap/client/: __init__.py  core.py  daemon.py  tui.py  utils.py  web.py
src/yap/server/: main.py
src/yap/testing/: __init__.py  client.py
src/yap/whisper_live/: server.py
src/yap/whisper_live/backend/: base.py  faster_whisper_backend.py  openvino_backend.py  translation_backend.py  trt_backend.py
src/yap/whisper_live/transcriber/: tensorrt_utils.py  transcriber_openvino.py
tests/: test_client.py  test_client_flow.py  test_cowsay.py  test_e2e.py  test_monitor_e2e.py  test_tui.py
yap/vim/: README.md
yap/vim/plugin/: yap.vim
yap/vim/python/: yap_monitor.py
