[project]
name = "yap-voice"
version = "0.1.0"
description = "Yap (Yet Another Pipe): Fast, split-architecture voice-to-text system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Danny", email = "danny@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "websockets>=14.2",
    "pyaudio>=0.2.14",
    "numpy>=2.2.2",
    "pyyaml>=6.0.2",
    "faster-whisper>=1.1.1",
    "torch>=2.6.0",
    "huggingface-hub>=0.28.1",
    "scipy>=1.11.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9"
]

[project.urls]
Homepage = "https://github.com/your-username/yap"
Repository = "https://github.com/your-username/yap"
Issues = "https://github.com/your-username/yap/issues"

[project.scripts]
yap = "yap.client.tui:main"
yap-server = "yap.server.main:start"
v2td = "yap.server.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yap"]
